--- a/app/css/base/_fonts.scss
+++ b/app/css/base/_fonts.scss
@@ -1,19 +1,48 @@
-// @font-face {
-// 	font-family: "Lato-Regular";
-// 	src: url("../fonts/Lato-Regular.woff2") format("woff2");
-// }
-
-// @font-face {
-// 	font-family: "Lato-Light";
-// 	src: url("../fonts/Lato-Light.woff2") format("woff2");
-// }
-
-// @font-face {
-// 	font-family: "Lato-Heavy";
-// 	src: url("../fonts/Lato-Heavy.woff2") format("woff2");
-// }
-
-// @font-face {
-// 	font-family: "VarelaRound";
-// 	src: url("../fonts/VarelaRound.woff2") format("woff2");
-// }
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-Regular.eot");
+    src: local("☺"), url("../fonts/MyriadPro-Regular.woff") format("woff"),
+        url("../fonts/MyriadPro-Regular.ttf") format("truetype"), url("../fonts/MyriadPro-Regular.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-Cond.eot");
+    src: local("☺"), url("../fonts/MyriadPro-Cond.woff") format("woff"),
+        url("../fonts/MyriadPro-Cond.ttf") format("truetype"), url("../fonts/MyriadPro-Cond.svg") format("svg");
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-Semibold.eot");
+    src: local("☺"), url("../fonts/MyriadPro-Semibold.woff") format("woff"),
+        url("../fonts/MyriadPro-Semibold.ttf") format("truetype"), url("../fonts/MyriadPro-Semibold.svg") format("svg");
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-Bold.eot");
+    src: local("☺"), url("../fonts/MyriadPro-Bold.woff") format("woff"),
+        url("../fonts/MyriadPro-Bold.ttf") format("truetype"), url("../fonts/MyriadPro-Bold.svg") format("svg");
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: "MyriadPro-It";
+    src: url("../fonts/MyriadPro-It.eot");
+    src: local("☺"), url("../fonts/MyriadPro-It.woff") format("woff"),
+        url("../fonts/MyriadPro-It.ttf") format("truetype"), url("../fonts/MyriadPro-It.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-BoldCond.eot");
+    src: local("☺"), url("../fonts/MyriadPro-BoldCond.woff") format("woff"),
+        url("../fonts/MyriadPro-BoldCond.ttf") format("truetype"), url("../fonts/MyriadPro-BoldCond.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
