--- a/app/css/layout/_layout.scss
+++ b/app/css/layout/_layout.scss
@@ -1,3 +1,3 @@
 #main-page {
-	font-family: "Roboto", Arial, Helvetica, sans-serif;
+	font-family: "Myriad Pro", "MyriadPro-It", Arial, Helvetica, sans-serif;
 }
