--- a/app/css/utils/_variables.scss
+++ b/app/css/utils/_variables.scss
@@ -2,6 +2,7 @@
 // ========================================
 $white: #fff;
 $black: #000;
+$golden-poppy: #ffc600;
 // 2. Breakpoints
 // ========================================
 $screen-sm: 575.98px;
