--- a/app/css/utils/_variables.scss
+++ b/app/css/utils/_variables.scss
@@ -2,6 +2,10 @@
 // ========================================
 $white: #fff;
 $black: #000;
+$dim-gray: #717171;
+$light-grey: #d7d7d7;
+$whisper: #e8e8e8;
+$zambezi: #595959;
 $golden-poppy: #ffc600;
 // 2. Breakpoints
 // ========================================
