--- a/app/css/base/_fonts.scss
+++ b/app/css/base/_fonts.scss
@@ -1,5 +1,14 @@
 @font-face {
     font-family: "Myriad Pro";
+    src: url("../fonts/MyriadPro-LightCond.eot");
+    src: local("☺"), url("../fonts/MyriadPro-LightCond.woff") format("woff"),
+        url("../fonts/MyriadPro-LightCond.ttf") format("truetype"),
+        url("../fonts/MyriadPro-LightCond.svg") format("svg");
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Myriad Pro";
     src: url("../fonts/MyriadPro-Regular.eot");
     src: local("☺"), url("../fonts/MyriadPro-Regular.woff") format("woff"),
         url("../fonts/MyriadPro-Regular.ttf") format("truetype"), url("../fonts/MyriadPro-Regular.svg") format("svg");
