finish second section

--- a/app/css/pages/main/_main-page.scss
+++ b/app/css/pages/main/_main-page.scss
@@ -1,7 +1,7 @@
 .about-sublime {
     background-color: $white;
     .about__body {
-        margin-top: 2.25rem;
+        padding-top: 2.25rem;
         .about__title {
             border-right: 1px solid $light-grey;
             h1 {
@@ -56,6 +56,45 @@
                 font-size: 14px;
                 font-weight: 300;
                 text-align: center;
+            }
+        }
+    }
+}
+
+.featured-projects {
+    background-color: $white;
+    overflow: hidden;
+    .featured__title {
+        padding-top: 7rem;
+        h1 {
+            font-size: 45px;
+            font-weight: 600;
+            @extend %first_letter;
+        }
+    }
+    .nav-item {
+        a {
+            font-size: 15px;
+            color: $black;
+            &:hover {
+                text-decoration: underline;
+                color: $golden-poppy;
+            }
+        }
+    }
+    .games {
+        display: flex;
+        flex-wrap: wrap;
+        .item__games {
+            flex: 1 1 auto;
+            img {
+                width: 100%;
+                height: 250px;
+                transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0s;
+                &:hover {
+                    transform: scale(1.1);
+                    box-shadow: 10px 30px 15px black;
+                }
             }
         }
     }
