--- a/app/css/pages/main/_main-page.scss
+++ b/app/css/pages/main/_main-page.scss
@@ -218,3 +218,55 @@
         }
     }
 }
+
+.our-team {
+    background-color: $white;
+    .team__title {
+        padding-top: 6rem;
+        h1 {
+            font-size: 45px;
+            font-weight: 600;
+            color: $black;
+            @extend %first_letter;
+            &:first-letter {
+                font-size: 60px;
+            }
+            span {
+                font-size: 55px;
+            }
+        }
+    }
+    .team__info {
+        padding-top: 5rem;
+        p {
+            color: $black;
+            font-size: 16px;
+        }
+        span {
+            font-size: 18px;
+            font-weight: 300;
+            color: $zambezi;
+        }
+    }
+    .founders {
+        margin-top: 2.5rem;
+        .founder__name {
+            text-align: center;
+            transform: translateX(-10px);
+            span {
+                color: $black;
+                font-weight: 400;
+                font-size: 16px;
+            }
+        }
+        .founder__position {
+            text-align: center;
+            transform: translateX(-10px);
+            i {
+                color: $zambezi;
+                font-weight: 300;
+                font-size: 16px;
+            }
+        }
+    }
+}
