finish eight_section

--- a/app/css/utils/_variables.scss
+++ b/app/css/utils/_variables.scss
@@ -7,6 +7,7 @@ $light-grey: #d7d7d7;
 $whisper: #e8e8e8;
 $zambezi: #595959;
 $golden-poppy: #ffc600;
+$persian-blue: #2046b3;
 // 2. Breakpoints
 // ========================================
 $screen-sm: 575.98px;
