--- a/app/css/pages/main/_main-page.scss
+++ b/app/css/pages/main/_main-page.scss
@@ -384,3 +384,138 @@
         }
     }
 }
+
+.contact-us {
+    .contact__body {
+        height: 685px;
+        .map {
+            background: url(../../img/contact/layer-52.png) 0 0 / auto 100% no-repeat;
+            height: 685px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .label {
+                color: $white;
+                background-color: $black;
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                border: 2px solid $golden-poppy;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+        .contact__form {
+            background-color: $persian-blue;
+        }
+        .contact__title {
+            padding-top: 3.25rem;
+            text-align: center;
+            h1 {
+                font-size: 45px;
+                font-weight: 600;
+                color: $white;
+                @extend %first_letter;
+                &:first-letter {
+                    font-size: 60px;
+                }
+                span {
+                    font-size: 55px;
+                }
+            }
+        }
+        .form {
+            width: 70%;
+            margin: auto;
+            ::placeholder {
+                font-size: 16px;
+                font-weight: 600;
+                color: $white;
+            }
+            input {
+                background: transparent;
+                border: 2px solid $white;
+                border-radius: 0px;
+                margin-top: 1rem;
+                color: $white;
+                font-size: 16px;
+                letter-spacing: 1px;
+            }
+            textarea {
+                background: transparent;
+                border: 2px solid $white;
+                border-radius: 0px;
+                margin-top: 1rem;
+                height: 100px;
+                resize: none;
+                color: $white;
+                font-size: 16px;
+                letter-spacing: 1px;
+            }
+            .button {
+                margin-top: 2rem;
+            }
+            .btn {
+                max-width: 110px;
+                width: 100%;
+                height: 35px;
+                border-radius: 0px;
+                background-color: $golden-poppy;
+            }
+            .btn-info {
+                font-size: 16px;
+                font-weight: 600;
+                color: $black;
+            }
+        }
+        .contact__info {
+            width: 70%;
+            margin: auto;
+            margin-top: 4rem;
+            .info__title {
+                color: $white;
+                h4 {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+            }
+            .contact__links {
+                color: $white;
+                padding-left: 0rem;
+                letter-spacing: 1px;
+                margin-top: 2.25rem;
+                span {
+                    font-size: 13px;
+                    font-weight: 300;
+                    letter-spacing: 1px;
+                    margin-left: 1.4rem;
+                    color: $white;
+                }
+                a {
+                    font-size: 13px;
+                    font-weight: 300;
+                    letter-spacing: 1px;
+                    margin-left: 2rem;
+                    color: $white;
+                    text-decoration: none;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+                .email {
+                    margin-left: 2.3rem;
+                }
+            }
+        }
+        .social__links {
+            width: 70%;
+            margin: auto;
+            border-top: 2px solid $light-grey;
+            margin-top: 4.25rem;
+            img {
+                padding-top: 1rem;
+            }
+        }
+    }
+}
