--- a/app/css/layout/_footer.scss
+++ b/app/css/layout/_footer.scss
@@ -1,13 +1,29 @@
 .footer {
     background: url(../../img/footer/img1.png) 0 0 / cover no-repeat;
     height: 650px;
+    overflow: hidden;
+    @media #{$max-screen-xs} {
+        position: absolute;
+    }
     .footer__title {
         padding-top: 8rem;
+        @media all and (max-width: 320px) {
+            padding-top: 6rem;
+        }
         h4 {
             font-size: 60px;
             font-weight: 600;
             color: $white;
             @extend %first_letter;
+            @media #{$max-screen-xl} {
+                font-size: 49px;
+            }
+            @media #{$max-screen-lg} {
+                font-size: 40px;
+            }
+            @media all and (max-width: 320px) {
+                font-size: 80px;
+            }
             &:first-letter {
                 font-size: 80px;
             }
@@ -15,11 +31,22 @@
     }
     .navbar {
         padding-bottom: 0rem;
+        @media all and (max-width: 320px) {
+            order: 2;
+            margin-top: 4rem;
+        }
         .nav {
             .social__links {
                 padding: 0.5rem 1rem;
                 border-top: 2px solid $golden-poppy;
                 margin-top: 3.25rem;
+                @media #{$max-screen-xl} {
+                    margin-top: 1.25rem;
+                }
+                @media all and (max-width: 320px) {
+                    border-top: none;
+                    margin-top: 0rem;
+                }
             }
         }
         .nav-item {
@@ -33,8 +60,23 @@
             }
         }
     }
+    .no-column {
+        @media all and (max-width: 320px) {
+            flex-direction: row !important;
+        }
+    }
     .tagline {
         padding-top: 5rem;
+        @media #{$max-screen-xl} {
+            padding-top: 0rem;
+        }
+        @media #{$max-screen-lg} {
+            padding-top: 5rem;
+        }
+        @media all and (max-width: 320px) {
+            order: 1;
+            padding-top: 2rem;
+        }
         h1 {
             font-size: 110px;
             font-weight: bold;
@@ -43,6 +85,32 @@
             span {
                 color: $golden-poppy;
             }
+            @media #{$max-screen-xl} {
+                font-size: 92px;
+            }
+            @media #{$max-screen-lg} {
+                font-size: 60px;
+            }
+            @media #{$max-screen-md} {
+                font-size: 65px;
+            }
+            @media #{$max-screen-sm} {
+                font-size: 60px;
+            }
+            @media #{$max-screen-xs} {
+                font-size: 50px;
+            }
+            @media all and (max-width: 403px) {
+                font-size: 40px;
+            }
+            @media all and (max-width: 320px) {
+                font-size: 39px;
+            }
+        }
+    }
+    .col-xs-12 {
+        @media all and (max-width: 320px) {
+            width: 100%;
         }
     }
 }
