--- a/app/css/layout/_header.scss
+++ b/app/css/layout/_header.scss
@@ -5,6 +5,15 @@
         font-weight: bold;
         color: $white;
         @extend %first_letter;
+        @media #{$max-screen-md} {
+            font-size: 140px;
+        }
+        @media #{$max-screen-xs} {
+            font-size: 90px;
+        }
+        @media all and (max-width: 320px) {
+            font-size: 80px;
+        }
     }
 }
 .sublime__subtitle {
@@ -16,6 +25,10 @@
 .sublime__link {
     margin-top: 1.875rem;
     margin-bottom: 3rem;
+    @media all and (max-width: 447px) {
+        margin-top: 0rem;
+        margin-bottom: 0rem;
+    }
     a {
         font-size: 18px;
         color: $golden-poppy;
@@ -29,13 +42,37 @@
 .head__wrapper {
     background: url(../../img/header/layer-5.png) 0 0/100% auto no-repeat;
     height: 700px;
+    @media #{$max-screen-lg} {
+        height: 500px;
+    }
+    @media #{$max-screen-md} {
+        height: 400px;
+    }
+    @media #{$max-screen-sm} {
+        height: 350px;
+    }
+    @media all and (max-width: 397px) {
+        height: 300px;
+    }
     .head__title {
         color: $white;
         padding-top: 5rem;
+        @media #{$max-screen-sm} {
+            padding-top: 2.5rem;
+        }
         h1 {
             font-size: 60px;
             font-weight: bold;
             line-height: 1;
+            @media #{$max-screen-xl} {
+                font-size: 50px;
+            }
+            @media #{$max-screen-sm} {
+                text-align: center;
+            }
+            @media all and (max-width: 397px) {
+                font-size: 30px;
+            }
         }
         span {
             color: $golden-poppy;
@@ -43,10 +80,27 @@
     }
     .navbar {
         margin-top: 3rem;
+        @media #{$max-screen-xl} {
+            margin-top: 0rem;
+        }
+        @media #{$max-screen-sm} {
+            margin-top: -15px;
+        }
+        .nav {
+            @media #{$max-screen-sm} {
+                justify-content: center;
+            }
+        }
         .nav-item {
             a {
                 font-size: 18px;
                 color: $golden-poppy;
+                @media #{$max-screen-sm} {
+                    font-size: 20px;
+                }
+                @media all and (max-width: 320px) {
+                    font-size: 17px;
+                }
                 &:hover {
                     text-decoration: underline;
                     color: $white;
